src/sass/main.scss
/* ... */
#add-task-form,
#edit-task-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-inline: auto;
  overflow: hidden;
  padding-inline: 1.5rem;
  width: min(500px, 100%);

  .add-task-button-container,
  .edit-task-button-container {
    display: flex;
    gap: 1rem;
    justify-content: center;
  }

  .edit-task-button-container {
    display: grid;
    grid-template-areas: 
    'save cancel'
    'delete delete';

    #save-edit-task-button {
      grid-area: save;
    }

    #cancel-edit-task-button {
      grid-area: cancel;
    }

    #delete-edit-task-button {
      grid-area: delete;
      margin-bottom: 1rem;
      margin-inline: auto;
    }
  }

  .input-container {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    .add-task-label,
    .edit-task-label {
      color: var(--color-text-primary);
      font-size: var(--body-fs);
      text-transform: uppercase;
    }

    .add-task-input,
    .edit-task-input {
      appearance: none;
      background: var(--input-background);
      border: none;
      border-radius: 100vw;
      box-shadow: var(--input-box-shadow);
      color: var(--color-text-primary);
      height: 1.75rem; // ? prevent due-date input from growing on focus
      line-height: 1.5;
      padding-block: 0.25rem;
      padding-inline: 1rem;
      
      &:focus,
      &:focus-visible {
        outline: none;
        box-shadow: var(--input-focus-box-shadow);
      }
      &::placeholder,
      &[type='date']:invalid {
        color: var(--input-placeholder-text-color);
      }
    }
  }
}

#add-task-form {
  margin-bottom: 3rem;
}

#edit-task-form {
  width: min(75vw, 555px);
}

#edit-task-dialog {
  -webkit-backdrop-filter: blur(1rem);
  backdrop-filter: blur(1rem);
  background: var(--container-background);
  border: none;
  border-radius: 55px;

  &::backdrop {
    -webkit-backdrop-filter: blur(2px);
    backdrop-filter: blur(2px);
  }

  &[data-hidden=hidden] {
    display: none;
  }

  &[data-hidden=closing] {
    animation: fade-out 380ms ease-in-out forwards;
    pointer-events: none;
  }

  &[data-hidden=visible] {
    animation: fade-in 380ms ease-in-out forwards;
    pointer-events: all;
  }

  #edit-task-heading {
    color: var(--color-text-primary);
    font-size: var(--h2-fs);
    margin-bottom: 1.5rem;
    text-align: center;
    text-transform: uppercase;
  }
}

.delete-confirmation-dialog {
  -webkit-backdrop-filter: blur(1rem);
  backdrop-filter: blur(1rem);
  background: var(--page-background);
  border: var(--component-border);
  border-radius: 55px;

  &::backdrop {
    -webkit-backdrop-filter: blur(2px);
    backdrop-filter: blur(2px);
  }

  .delete-confirmation-modal {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    height: 8rem;
    justify-content: center;
    width: min(55vw, 200px);

    .delete-confirmation-heading {
      color: var(--color-text-primary);
      font-size: var(--h2-fs);
      text-align: center;
    }

    .delete-confirmation-button-container {
      display: flex;
      gap: 1rem;
      justify-content: center;
    }
  }
}

footer {
  $footer-item-gap: 3rem;

  align-items: center;
  display: flex;
  gap: $footer-item-gap;
  inset: auto 0 0 0;
  justify-content: center;
  padding-block: 1rem;
  padding-inline:3rem;
  position: fixed;

  .cyclone-logo-container,
  .git-hub-logo-link {
    opacity: 0.55;
    transition: transform 150ms ease-in-out, opacity 380ms ease-in-out;

    &:hover {
      opacity: 1;
      transform: rotate(360deg) scale(1.1);
    }

    &:active {
      opacity: 0.75;
      transform: scale(0.99);
    }
  }

  .cyclone-logo-container {
    display: flex;
    flex-direction: column;

    .cyclone-studios-logo-link {
      filter: drop-shadow(0 0px 2px var(--footer-link-drop-shadow));
    
      .cyclone-studios-logo {
        width: min(15vw, 3.5rem);
      }
    }

    .footer-paragraph {
      font-size: var(--small-text);
      text-align: center;
    }
  }
}

@media (max-width: 35em) {
  nav.zig-zag-nav {
    border-radius: unset;
    bottom: 0;
    flex-direction: column;
    min-width: 16.625rem; // ? width of add project input when open
    padding: min(30vh, 10rem) 2rem;
    right: 0;
    top: 0;
    width: max-content;

    .nav-list-container {
      padding: 0;
    }

    #project-nav-list-container {
      border: none;
      grid-template-areas:
        'heading'
        'add-project'
        'project-list';
      max-height: unset;
      padding: 0;

      #add-project-container {
        #add-project-form {
          grid-template-areas: 'input-container' 'button-container';
          grid-template-rows: 0fr 0fr;

          #project-input-container {
            .list-icon-container {
              display: none;
            }
          }
        }
      }

      #project-nav-list {
        border-radius: 1rem;
        flex-direction: column;
        padding: 1.125rem;
        flex-wrap: nowrap;
      }
    }
  }

  #task-list {
    padding-inline: 1rem;

    .task-item {
      grid-template-areas:
        'checkbox title title right-side'
        'checkbox details details right-side';

      .task-right-side-container {
        grid-template-columns: 1fr;
      }
    }
  }
}

@media (min-width: 35em) {
  nav.zig-zag-nav {
    #project-nav-list-container {
      max-height: 433px;

      #add-project-container {
        #add-project-form {
          grid-template-areas:
            'input-container'
            'button-container';
          grid-template-rows: 0fr 0fr;
        }
      }
    }
  }
}
/* ... */

